--- a/rando/core/templates/_detail_panel.html
+++ b/rando/core/templates/_detail_panel.html
@@ -72,7 +72,7 @@
   </div>
 </div><!-- detail-content -->
 
-{% leaflet_map 'detailmap' fitextent=False creatediv=False callback="detailmapInit" loadevent="rando:foo" %}{# Such loadevent will prevent automatic map initialization #}
+{% leaflet_map 'detailmap' fitextent=False creatediv=False %}
 
 {% block extracontent %}
 {% endblock extracontent %}
